trunk/Archive2/3b/8d0aec6d43cb13/output
main.cpp: In instantiation of 'void print_to_stream(std::ostream&, const T&) [with T = Fruit; std::ostream = std::basic_ostream<char>]':
main.cpp:17:38:   required from here
main.cpp:11:7: error: passing 'Fruit' chooses 'int' over 'unsigned int' [-Werror=sign-promo]
     o << value;
       ^
main.cpp:11:7: error:   in call to 'std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(int) [with _CharT = char; _Traits = std::char_traits<char>]' [-Werror=sign-promo]
cc1plus: some warnings being treated as errors
